# docket

./: .gitignore  ARCHITECTURE-AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  MIGRATION-PLAN-PYTHON.md  MIGRATION-TASKS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SSD-WORKFLOW.md  TODO.md  install.sh  pyproject.toml  uninstall.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
Formula/: docket-cli.rb  rack-cli.rb
docs/: AGENT-TEAMS.md  DOCKET.md  MULTIMODAL.md  QUICK-START-DOCKET.md  QUICK-START-RACK.md  RACK-ANALYSIS.md  RACK-IMPLEMENTATION-COMPLETE.md  RACK.md  README.md  SECURITY-SIMPLE.md  WORKFLOW-GUIDE.md  architecture.md  commands.md  development.md  getting-started.md  installation.md  troubleshooting.md
docs/assets/: README.md  hero.tape
examples/configs/: README.md  agents.json  agents.yaml  multi-project-agent-meta.json  premium-agent-meta.json  repo-agent-meta.json  task-agent-meta.json
examples/workflows/: ci-pipeline.lobster.yml  code-review.lobster.yml
lib/commands/: add.sh  approve.sh  audit.sh  auth.sh  billing.sh  browser.sh  cleanup.sh  completions.sh  context.sh  cost.sh  delete.sh  deny.sh  doctor.sh  (+28 more)
scripts/: metrics.py  metrics.sh  render-hero.py  spec-coverage.sh  update-homebrew-sha.sh  validate-specs.sh  wire-local-provider.sh
specs/: README.md  test-framework.md
tests/: run-all-tests.sh  test-lifecycle.sh
(+198 files in other folders)
